Fix scrolling on mobile so all files/scenes are visibile
Some were being hidden behind the search bar. Currently breaks view of results
menu on desktop.

--- a/src/app/components/results-menu/results-menu.component.scss
+++ b/src/app/components/results-menu/results-menu.component.scss
@@ -1,9 +1,8 @@
 @import "asf-theme";
 
-.results-menu {
-  bottom: 0;
-  left: 0;
-  position: static;
+.rectangle-wrapper {
+  position: fixed;
+  bottom: 90px;
 }
 
 .results-menu--background {
@@ -30,11 +29,6 @@
 
 .mwlResizable {
   box-sizing: border-box; // required for the enableGhostResize option to work
-}
-
-.rectangle-wrapper {
-  position: fixed;
-  bottom: 0;
 }
 
 .resize-handle-top,
