--- a/src/app/components/results-menu/scene-files/scene-files.component.scss
+++ b/src/app/components/results-menu/scene-files/scene-files.component.scss
@@ -1,5 +1,4 @@
 .products-list {
-  height: calc(100% - 60px);
   padding-top: 0;
   overflow-y: auto;
 }
